<resources>
    <string name="app_name">PDM</string>
    <string name="login_botao">Login</string>
    <string name="menu_titulo">Select a function</string>
    <string name="titulo_resultado">The result of operation is: </string>
    <string name="descricao_logo_titulo">Image of android green robot with padlock in chest</string>
    <string name="descricao_campo_login">field to enter your Username</string>
    <string name="descricao_campo_senha">field to enter your Password</string>
    <string name="descricao_botao_login">button to log into the app with your user</string>
    <string name="descricao_botao_calculadora_titulo">button with a picture of a calculator, to open function calculator</string>
    <string name="descricao_botao_em_breve_titulo">button with a picture saying coming soon, actualy disabled</string>
    <string name="descricao_botao_sete">Seven button</string>
    <string name="descricao_botao_oito">Eight button</string>
    <string name="descricao_botao_nove">Nine button</string>
    <string name="descricao_botao_divide">button to divide actual number</string>
    <string name="descricao_botao_quatro">Four button</string>
    <string name="descricao_botao_cinco">Five button</string>
    <string name="descricao_botao_seis">Six button</string>
    <string name="descricao_botao_multiplica">button to Multiply actual number</string>
    <string name="descricao_botao_subtrai">button to Subtract actual number</string>
    <string name="descricao_botao_soma">button to Sum actual number</string>
    <string name="descricao_botao_um">One  button</string>
    <string name="descricao_botao_dois">Two button</string>
    <string name="descricao_botao_tres">Three button</string>
    <string name="descricao_botao_zero">Zero Button</string>
    <string name="descricao_botao_ponto">Point button</string>
    <string name="descricao_botao_igual">Equal Button, to show the answer of operation</string>
    <string name="descricao_botao_cadastro">button with a picture of a form and a pencil, to open function register</string>
    <string name="cadastro_campo_nome">Name:</string>
    <string name="cadastro_campo_funcao">Function:</string>
    <string name="cadastro_campo_data_de_nascimento">Birthday:</string>
    <string name="cadastro_campo_sexo">Sex:</string>
    <string name="cadastro_radiobutton_masculino">Male</string>
    <string name="cadastri_radiobutton_feminino">Female</string>
    <string name="cadastro_campo_idioma">Language:</string>
    <string name="cadastro_checkbox_ingles">English</string>
    <string name="cadastro_checkbox_portugues">Portuguese</string>
    <string name="cadastro_checkbox_espanhol">Spanish</string>
    <string name="cadastro_campo_altura">Height:</string>
    <string name="cadastro_button_cadastrar">Register</string>
    <string-array name="cadastro_funcao_array">
        <item>Administrator</item>
        <item>Editor</item>
        <item>User</item>
    </string-array>
    <string name="title_activity_altera">altera</string>
    <string name="title_activity_teste">teste</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
