<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_campo_nome" />

    <EditText
        android:id="@+id/cadastro_campo_nome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_campo_funcao" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/funcao_spinner"
        android:spinnerMode="dropdown"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_campo_data_de_nascimento" />

    <EditText
        android:id="@+id/cadastro_campo_data_nascimento"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_campo_sexo" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cadastro_radiogroup_sexo">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_radiobutton_masculino"
            android:id="@+id/cadastro_radiobutton_masculino"
            android:checked="true" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastri_radiobutton_feminino"
            android:id="@+id/cadastro_radiobutton_feminino"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_campo_idioma" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_checkbox_ingles"
        android:id="@+id/cadastro_checkbox_ingles"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_checkbox_portugues"
        android:id="@+id/cadastro_checkbox_portugues"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_checkbox_espanhol"
        android:id="@+id/cadastro_checkbox_espanhol"
        android:checked="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_campo_altura" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cadastro_textview_altura" />

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
           android:id="@+id/cadastro_seekbar_altura"
            android:progress="30"
            android:indeterminate="false" />
    </LinearLayout>

    <Button
        android:id="@+id/cadastro_button_cadastra"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_button_cadastrar" />


</LinearLayout>
    </ScrollView>