<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hefestusgames.pdm.LoginActivity"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cadeado"
        android:src="@drawable/cadeado_android"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/descricao_logo_titulo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editLogin"
        android:contentDescription="@string/descricao_campo_login" />

      <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editSenha"
        android:inputType="textPassword"
          android:contentDescription="@string/descricao_campo_senha" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_botao"
        android:id="@+id/botaoLogin"
        android:contentDescription="@string/descricao_botao_login" />

</LinearLayout>
